0.22-SNAPSHOT
-------------
Enhancements:
https://github.com/Netflix/genie/issues/17
https://github.com/Netflix/genie/issues/18
https://github.com/Netflix/genie/issues/21
https://github.com/Netflix/genie/issues/25
https://github.com/Netflix/genie/issues/27
https://github.com/Netflix/genie/issues/28
https://github.com/Netflix/genie/issues/29
https://github.com/Netflix/genie/issues/32
https://github.com/Netflix/genie/issues/34
https://github.com/Netflix/genie/issues/38

Bug fixes:
https://github.com/Netflix/genie/issues/20

0.21
----
Enhancements:

https://github.com/Netflix/genie/issues/8
https://github.com/Netflix/genie/issues/14

Bug fixes:

https://github.com/Netflix/genie/issues/5
https://github.com/Netflix/genie/issues/11
https://github.com/Netflix/genie/issues/12

0.20
----
Genie OSS release