@@ -14,6 +14,7 @@ https://github.com/Netflix/genie/issues/38
 
 Bug fixes:
 https://github.com/Netflix/genie/issues/20
+https://github.com/Netflix/genie/issues/40
 
 0.21
 ----
